// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiRange no refinements 1`] = `
<div
  className="ais-NumericMenu"
>
  <div
    className="ais-NumericMenu-body ais-body"
  >
    <ul
      className="ais-NumericMenu-list"
    >
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--noRefinement"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={true}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label1
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--noRefinement"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={true}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label2
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--noRefinement"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={true}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label3
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--noRefinement"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={true}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label4
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--selected"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={true}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            All
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiRange supports having a selected item 1`] = `
<div
  className="ais-NumericMenu"
>
  <div
    className="ais-NumericMenu-body ais-body"
  >
    <ul
      className="ais-NumericMenu-list"
    >
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label1
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--selected"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={true}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label2
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label3
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label4
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            All
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;

exports[`MultiRange supports passing items values 1`] = `
<div
  className="ais-NumericMenu"
>
  <div
    className="ais-NumericMenu-body ais-body"
  >
    <ul
      className="ais-NumericMenu-list"
    >
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label1
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label2
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label3
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={false}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            label4
          </span>
        </label>
      </li>
      <li
        className="ais-NumericMenu-item ais-NumericMenu-item--selected"
      >
        <label
          className="ais-NumericMenu-label"
        >
          <input
            checked={true}
            className="ais-NumericMenu-radio"
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span
            className="ais-NumericMenu-labelText"
          >
            All
          </span>
        </label>
      </li>
    </ul>
  </div>
</div>
`;
